# codex-telegram-bridge

./: .gitignore  LICENSE  PROMO.md  README.md  RELEASE_CHECKLIST.md  bridge_setup.py  bridge_watchdog.py  codex_audio_transcribe.py  codex_conpty_attach.py  codex_repl_bridge.py  codex_repl_host_windows.py  config.example.env  pyproject.toml  requirements.txt  telegram_agent_bridge.py
.github/workflows/: ci.yml
agent_runtime/: __init__.py  approvals.py  capabilities.py  locks.py  transport.py  types.py
agent_runtime/adapters/: __init__.py  base.py  codex_repl.py
docs/: agent-runtime.md
examples/launchd/: com.user.telegram-agent-bridge-watchdog.plist  com.user.telegram-agent-bridge.plist
examples/systemd/: telegram-agent-bridge-watchdog.service  telegram-agent-bridge-watchdog.timer  telegram-agent-bridge.service
examples/triggers/: byo-signal-submit.sh
schemas/: approval-request.schema.json  head-capabilities.schema.json
tests/: test_agent_runtime.py  test_bridge.py  test_codex_conpty_attach.py  test_public_export.py  test_repl_bridge.py  test_repl_transport.py  test_setup_wizard.py  test_watchdog.py
