[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-telegram-bridge"
version = "0.3.4"
description = "Run Codex from Telegram, with an adapter foundation for other terminal AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Kang Daejong" }
]
keywords = ["codex", "telegram", "cli", "automation", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development"
]
dependencies = []

[project.optional-dependencies]
asr = ["faster-whisper", "imageio-ffmpeg"]

[project.urls]
Homepage = "https://github.com/ssamssae/codex-telegram-bridge"
Repository = "https://github.com/ssamssae/codex-telegram-bridge"
Releases = "https://github.com/ssamssae/codex-telegram-bridge/releases"
Issues = "https://github.com/ssamssae/codex-telegram-bridge/issues"

[project.scripts]
codex-telegram-bridge = "bridge_setup:main"
telegram-agent-bridge = "bridge_setup:main"

[tool.setuptools]
packages = [
  "agent_runtime",
  "agent_runtime.adapters"
]
py-modules = [
  "bridge_setup",
  "telegram_agent_bridge",
  "codex_repl_bridge",
  "codex_audio_transcribe"
]
