[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-telegram-bridge"
version = "0.9.1"
description = "Control a live Codex CLI session from Telegram."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Kang Daejong" }
]
keywords = ["codex", "telegram", "cli", "automation", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development"
]
dependencies = []

[project.optional-dependencies]
asr = ["faster-whisper", "imageio-ffmpeg"]

[project.urls]
Homepage = "https://github.com/ssamssae/codex-telegram-bridge"
Repository = "https://github.com/ssamssae/codex-telegram-bridge"
Releases = "https://github.com/ssamssae/codex-telegram-bridge/releases"
Issues = "https://github.com/ssamssae/codex-telegram-bridge/issues"

[project.scripts]
codex-telegram-bridge = "bridge_setup:main"
telegram-agent-bridge = "bridge_setup:main"
codex-telegram-bridge-watchdog = "bridge_watchdog:main"

[tool.setuptools]
packages = [
  "agent_runtime",
  "agent_runtime.adapters"
]
py-modules = [
  "bridge_setup",
  "bridge_watchdog",
  "telegram_agent_bridge",
  "codex_repl_bridge",
  "codex_repl_host_windows",
  "codex_audio_transcribe"
]
